[gd_scene format=3 uid="uid://dtdjue1l1j7nw"]

[ext_resource type="Script" uid="uid://yp6d7eokh83t" path="res://scripts/main_menu.gd" id="1_l6cm7"]

[node name="MainMenu" type="Control" unique_id=709170928]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l6cm7")

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=2134081391]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" unique_id=1145342460]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1285334613]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "ASTRO ESCAPE"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer" unique_id=1857470371]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="PlayerCountLabel" type="Label" parent="CenterContainer/VBoxContainer" unique_id=1864061665]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Select Number of Players"
horizontal_alignment = 1

[node name="PlayerCountButtons" type="HBoxContainer" parent="CenterContainer/VBoxContainer" unique_id=2044531510]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Player2Button" type="Button" parent="CenterContainer/VBoxContainer/PlayerCountButtons" unique_id=622769412]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "2 Players"

[node name="Player3Button" type="Button" parent="CenterContainer/VBoxContainer/PlayerCountButtons" unique_id=1790883812]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "3 Players"

[node name="Player4Button" type="Button" parent="CenterContainer/VBoxContainer/PlayerCountButtons" unique_id=130358494]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "4 Players"

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer" unique_id=1350283426]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer" unique_id=1623650803]
custom_minimum_size = Vector2(250, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 24
disabled = true
text = "Continue âžœ"
